--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,9 @@
         "php": ">=5.5",
         "ironphp/ironphp": "@dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
+    },
     "config": {
         "optimize-autoloader": true,
         "preferred-install": "dist",
@@ -45,6 +48,7 @@
             "config/paths.php"
         ]
     },
+    "bin": ["jarvis"],
     "minimum-stability": "dev",
     "prefer-stable": false,
     "scripts": {
